# ArcFISH

./: .buildinfo  Makefile  README.md  contact.html  genindex.html  index.html  install.html  objects.inv  pyproject.toml  search.html  searchindex.js  snapfish2  workflow.html
_sources/: index.md.txt  install.md.txt  workflow.md.txt
_sources/api/: tools.md.txt
_sources/figures/: 0illustration.ipynb.txt  2tad_benchmark.ipynb.txt  40rnaseq.ipynb.txt  4mouse_brain.ipynb.txt
_sources/tutorial/: cli_usage.md.txt  index.md.txt  loop_domain.ipynb.txt
_static/: copybutton.js
api/: index.html  plot.html  preprocess.html  tools.html  wrapper.html
arcfish/plot/: __init__.py  heatmap.py  trace.py  utils.py
arcfish/tools/: __init__.py  cpmt.py  domain.py  func.py  loop.py  simulate.py
arcfish/utils/: __init__.py  load.py
arcfish/wrapper/: __init__.py  calling.py  cmdline.py  differential.py
docs/: requirements.txt
docs/source/: apilist.rst  conf.py  contact.md  index.md  install.md  workflow.md
figures/: 00normalization.ipynb  00scanpy.ipynb  0algorithm.html  0algorithm.ipynb  0illustration.html  1loop_benchmark.html  1loop_benchmark.ipynb  2tad_benchmark.html  2tad_benchmark.ipynb  3cpmt_benchmark.html  3cpmt_benchmark.ipynb  3differential.html  3differential.ipynb  40rnaseq.html  40rnaseq.ipynb  4cpmt_benchmark.html  4cpmt_benchmark.ipynb  4mouse_brain.html  6murphy_etal.html  6murphy_etal.ipynb  index.html  index.md
figures/scripts/: 11_err_rep.py  21_tad_rep.py  41_brain.py
figures/utils/: __init__.py  data.py  lines.py  maps.py  method.py  ratio_estimate.py  utils.py
notebooks/: impute_covar.ipynb  impute_realhic.ipynb  loop_mesc.ipynb  loop_tests.ipynb
notebooks/eda/: data.ipynb  utils.py
notebooks/impute/: impute_covar.ipynb  impute_realhic.ipynb  impute_simulations.ipynb
notebooks/loop/: differential.ipynb  mesc_loops.ipynb  simulation.ipynb
snapfish2/: __init__.py
tutorial/: 4DNFIHF3JCBY.csv  cli_usage.html  cli_usage.md  cpmt.html  cpmt.ipynb  index.html  index.md  load_storage.html  load_storage.ipynb  loop_domain.html  loop_tad_calling.ipynb
(+80 files in other folders)
