[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "snapfish2"
version = "0.0.0"
authors = [
  { name="Hongyu Yu", email="hongyuyu@unc.edu" }
]
description = "Integrative analysis of imaging-based spatial genomic data"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GPL-3.0",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "scipy>=1.12.0",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "statsmodels==0.14.1",
    "scikit-learn>=1.4.1"
]

[project.urls]
"Homepage" = "https://github.com/hyuyu104/DNEYET"

[tool.setuptools]
packages = ["snapfish2"]
py-modules = ["__init__"]