[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "snapfish2"
authors = [
  { name="Hongyu Yu", email="hongyuyu@unc.edu" }
]
dynamic = ["version"]
description = "An integrative analysis tool for multiplexed FISH"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GPL-3.0",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "scipy>=1.12.0",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "statsmodels==0.14.1",
    "scikit-learn>=1.4.1",
    "anndata>=0.10.8",
    "dask==2025.1.0"
]

[tool.setuptools.dynamic]
version = {attr = "snapfish2.__version__"}

[project.optional-dependencies]
docs = [
    "sphinx==8.1.3",
    "pydata-sphinx-theme==0.16.1",
    "sphinxcontrib-napoleon==0.7",
    "myst-parser==4.0.0",
    "sphinx_plotly_directive==0.1.3",
    "sphinx_design==0.6.1",
    "sphinx-tabs==3.4.7",
    "sphinx-copybutton==0.5.2"
]

[project.urls]
Source = "https://github.com/hyuyu104/DNEYET"
Docs = "https://github.com/hyuyu104/DNEYET"

[tool.setuptools]
packages = ["snapfish2"]
py-modules = ["__init__"]